# ArgsHandler

./: CMakeLists.txt
include/: Args.hpp
src/: processWithCmakeStyle.cpp
